Rename wheel segment

--- a/version_1/index.html
+++ b/version_1/index.html
@@ -8,14 +8,14 @@
   <div class="container">
     <div class="spinBtn">Spin</div>
     <div class="wheel">
-      <div class="slice" style="--i:1;--clr:#db7093;"><span>John</span></div>
-      <div class="slice" style="--i:2;--clr:#ff7f50;"><span>Alice</span></div>
-      <div class="slice" style="--i:3;--clr:#6495ed;"><span>Michael</span></div>
-      <div class="slice" style="--i:4;--clr:#008000;"><span>Sarah</span></div>
-      <div class="slice" style="--i:5;--clr:#ff1493;"><span>David</span></div>
-      <div class="slice" style="--i:6;--clr:#ffa500;"><span>Emily</span></div>
-      <div class="slice" style="--i:7;--clr:#4169e1;"><span>James</span></div>
-      <div class="slice" style="--i:8;--clr:#008080;"><span>Laura</span></div>
+      <div class="wheel_segment" style="--i:1;--clr:#db7093;"><span>John</span></div>
+      <div class="wheel_segment" style="--i:2;--clr:#ff7f50;"><span>Alice</span></div>
+      <div class="wheel_segment" style="--i:3;--clr:#6495ed;"><span>Michael</span></div>
+      <div class="wheel_segment" style="--i:4;--clr:#008000;"><span>Sarah</span></div>
+      <div class="wheel_segment" style="--i:5;--clr:#ff1493;"><span>David</span></div>
+      <div class="wheel_segment" style="--i:6;--clr:#ffa500;"><span>Emily</span></div>
+      <div class="wheel_segment" style="--i:7;--clr:#4169e1;"><span>James</span></div>
+      <div class="wheel_segment" style="--i:8;--clr:#008080;"><span>Laura</span></div>
     </div>
   </div>
   <script>
